--- a/app/templates/backend/admin_templates/bestellungen/admin_edit_order.html
+++ b/app/templates/backend/admin_templates/bestellungen/admin_edit_order.html
@@ -13,6 +13,7 @@
                     </div>
                     <div class="card-body">
                         <form method="POST" action="{{ url_for('admin_bp.edit_order', order_id=order.id) }}">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="mb-3">
