--- a/app/templates/backend/client_templates/add_lieferzeiten.html
+++ b/app/templates/backend/client_templates/add_lieferzeiten.html
@@ -9,6 +9,7 @@
             <h2 class="h5 mb-4">Öffnungszeiten hinzufügen</h2>
 
             <form method="POST" action="{{ url_for('client_lieferzeiten_bp.add_lieferzeiten') }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 
 
                 <div class="mb-3">
