--- a/app/templates/backend/client_templates/client_password_reset_request.html
+++ b/app/templates/backend/client_templates/client_password_reset_request.html
@@ -24,6 +24,7 @@
                                 <h1 class="mb-0 h3">Restaurant Login</h1>
                             </div>
                             <form action="{{ url_for('client_bp.password_reset_request') }}" method="POST">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <!-- Form -->
                                 <div class="form-group mb-4">
                                     {% if get_flashed_messages() %}
