--- a/app/templates/backend/client_templates/client_password_set_admin.html
+++ b/app/templates/backend/client_templates/client_password_set_admin.html
@@ -25,6 +25,7 @@
                             </div>
                             
                             <form action="{{ url_for('client_bp.client_password_set_admin', token=token) }}" method="POST">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <!-- Flash-Messages für Fehler anzeigen -->
                                 {% with messages = get_flashed_messages(with_categories=True) %}
                                     {% if messages %}
