--- a/app/templates/backend/user_templates/user_password_reset_form.html
+++ b/app/templates/backend/user_templates/user_password_reset_form.html
@@ -27,6 +27,7 @@
                      <!-- End Flash Messages Block -->
 
                      <form action="{{ url_for('user_bp.password_reset_token', token=token) }}" method="POST">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="form-label-group">
                            <input type="password" class="form-control" id="password" name="password" placeholder="Neues Passwort" required>
                            <label for="password" class="form-label">Neues Passwort</label>
