--- a/app/templates/backend/user_templates/user_password_reset_request.html
+++ b/app/templates/backend/user_templates/user_password_reset_request.html
@@ -28,6 +28,7 @@
 
                      <!-- Passwort-Reset-Formular -->
                      <form action="{{ url_for('user_bp.password_reset_request') }}" method="POST">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="form-label-group">
                             
                             <input type="email" class="form-control" id="email" name="email" placeholder="E-Mail-Adresse eingeben" required>
