--- a/app/templates/backend/admin_templates/admin_change_password.html
+++ b/app/templates/backend/admin_templates/admin_change_password.html
@@ -22,6 +22,7 @@
 
 
 <form action="{{ url_for('admin_bp.change_password') }}" method="POST">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <!-- Altes Passwort -->
     <div class="mb-3">
         <label for="current_password" class="form-label">Aktuelles Passwort</label>
