--- a/app/templates/backend/admin_templates/admin_password_reset_form.html
+++ b/app/templates/backend/admin_templates/admin_password_reset_form.html
@@ -24,6 +24,7 @@
                                 <h3 class="mb-0 h3">Neues Passwort festlegen</h3>
                             </div>
                             <form action="{{ url_for('admin_bp.password_reset_token', token=token) }}" method="POST">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <!-- Form -->
                                 <div class="form-group mb-4">
                                     {% if get_flashed_messages() %}
