--- a/app/templates/backend/client_templates/add_banner.html
+++ b/app/templates/backend/client_templates/add_banner.html
@@ -11,6 +11,7 @@
             <h2 class="h5 mb-4">Neues Banner hinzufügen</h2>
 
             <form action="{{ url_for('client_banner_bp.add_banner') }}" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="row">
                     <!-- Eingabefeld für Bild -->
                     <div class="col-md-6">
