--- a/app/templates/backend/client_templates/add_galerie.html
+++ b/app/templates/backend/client_templates/add_galerie.html
@@ -8,6 +8,7 @@
         <div class="card card-body border-0 shadow mb-4">
             <h2 class="h5 mb-4">Neue Galerie hinzufügen</h2>
             <form action="{{ url_for('client_galerie_bp.add_galerie_image') }}" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="row">
                     <!-- Eingabefeld für Bild -->
                     <div class="col-md-6">
