--- a/app/templates/backend/client_templates/add_product.html
+++ b/app/templates/backend/client_templates/add_product.html
@@ -8,6 +8,7 @@
         <div class="card card-body border-0 shadow mb-4">
 <h1>Neues Produkt hinzufügen</h1>
 <form action="{{ url_for('client_product_bp.add_product') }}" method="POST" enctype="multipart/form-data">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <!-- Produktinformationen -->
     <div class="col-md-6">
         <label for="name" class="form-label">Name des Produkts</label>
