--- a/app/templates/backend/client_templates/category_list.html
+++ b/app/templates/backend/client_templates/category_list.html
@@ -35,6 +35,7 @@
                                         <!-- Buttons zum Bearbeiten und Löschen -->
                                         <a href="{{ url_for('client_category_bp.edit_category', id=category.id) }}" class="btn btn-warning">Bearbeiten</a>
                                         <form action="{{ url_for('client_category_bp.delete_category', id=category.id) }}" method="POST" style="display:inline-block;">
+                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                             <button type="submit" class="btn btn-danger">Löschen</button>
                                         </form>
                                     </td>
