--- a/app/templates/backend/client_templates/client_login.html
+++ b/app/templates/backend/client_templates/client_login.html
@@ -25,6 +25,7 @@
                                 <h1 class="mb-0 h3">Restaurant Login</h1>
                             </div>
                             <form action="{{ url_for('client_bp.login') }}" method="POST" class="mt-4">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <!-- Form für die E-Mail -->
                                 <div class="form-group mb-4">
                                     <label for="email">Restaurant Email</label>
