--- a/app/templates/backend/client_templates/client_profile.html
+++ b/app/templates/backend/client_templates/client_profile.html
@@ -22,6 +22,7 @@
 
 
 <form action="{{ url_for('client_bp.profile_update') }}" method="POST" enctype="multipart/form-data">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
    <!-- Felder für Restaurantinformationen -->
    <div class="row">
        <div class="col-lg-6">
