--- a/app/templates/backend/client_templates/client_register.html
+++ b/app/templates/backend/client_templates/client_register.html
@@ -38,6 +38,7 @@
                             {% endwith %}
                             
                             <form action="{{ url_for('client_bp.register') }}" method="POST">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <!-- Form -->
                                 <div class="form-group mb-4">
                                     <label for="email">Restaurant Name</label>
