--- a/app/templates/backend/client_templates/edit_banner.html
+++ b/app/templates/backend/client_templates/edit_banner.html
@@ -8,6 +8,7 @@
         <div class="card card-body border-0 shadow mb-4">
             <h2 class="h5 mb-4">Banner bearbeiten</h2>
             <form action="{{ url_for('client_banner_bp.edit_banner', id=banner.id) }}" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="row">
                     <!-- Eingabefeld für Bild -->
                     <div class="col-md-6">
