--- a/app/templates/backend/client_templates/edit_product.html
+++ b/app/templates/backend/client_templates/edit_product.html
@@ -8,6 +8,7 @@
         <div class="card card-body border-0 shadow mb-4">
 <h1>Produkt bearbeiten</h1>
 <form action="{{ url_for('client_product_bp.edit_product', id=product.id) }}" method="POST" enctype="multipart/form-data">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <!-- Produktinformationen -->
     <div class="mb-3">
         <label for="name" class="form-label">Name des Produkts</label>
