--- a/app/templates/backend/user_templates/dashboard/dashboard.html
+++ b/app/templates/backend/user_templates/dashboard/dashboard.html
@@ -22,6 +22,7 @@
                          <div class="gold-members p-4">
                             
                            <form action="{{ url_for('user_bp.profile_edit') }}" method="POST" enctype="multipart/form-data">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                               <!-- Felder für Restaurantinformationen -->
                               <div class="row">
                                   <div class="col-lg-6">
