--- a/app/templates/backend/client_templates/bestellungen/client_pending_orders.html
+++ b/app/templates/backend/client_templates/bestellungen/client_pending_orders.html
@@ -57,7 +57,7 @@
                                             <div class="dropdown">
                                                 <a href="#" class="text-secondary" id="dropdownMenuLink{{ order.id }}" data-bs-toggle="dropdown" aria-expanded="false">
                                                     <span class="sidebar-icon">
-                                                        <i class="fas fa-eye"></i>
+                                                        <i class="fas fa-cog"></i>
                                                     </span>
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink{{ order.id }}">
