--- a/app/templates/backend/user_templates/dashboard/layout/sidebar.html
+++ b/app/templates/backend/user_templates/dashboard/layout/sidebar.html
@@ -27,6 +27,13 @@
         </li>
         
 
+        <li class="nav-item">
+         <a class="nav-link {{ 'active' if 'meine_bestellungen' in current_rule else '' }}" href="{{ url_for('user_bp.meine_bestellungen') }}">
+             <i class="icofont-sale-discount"></i> Meine Bestellungen
+         </a>
+     </li>
+     
+
           
 
 
