--- a/app/templates/backend/user_templates/dashboard/view_meine_bestellung.html
+++ b/app/templates/backend/user_templates/dashboard/view_meine_bestellung.html
@@ -133,6 +133,7 @@
                     <td>{{ order.client.clientname }}</td>
                     <td>{{ item.product.tax_rate }} %</td>
                     <td>{{ item.quantity }}</td>
+                    
                     <td>{{ item.price }} € (Gesamt: {{ item.price * item.quantity }} €)</td>
                 </tr>
                 {% endfor %}
@@ -140,12 +141,17 @@
         </table>
     </div>
 
-    <div class="d-flex justify-content-end mt-4">
-        <h6 >
-            <span>MwSt./USt. Insgesamt:</span> <span class="text" id="tax">{{total_tax}} €</span>  
-        </h6><br>
-        <h5><strong>Gesamtpreis: {{ total_price }} €</strong><p class="text-muted mb-1 text-right">Inkl. MwSt./USt.</p></h5>
+    <div class="d-flex flex-column align-items-end mt-4">
+        <h5 class="mb-2">
+            <p class="mb-1">
+                <span>MwSt./USt. Insgesamt:</span> 
+                <span class="text" id="tax">{{ total_tax | round(2) }} €</span>
+            </p>
+            <strong>Gesamtpreis: {{ total_price }} €</strong>
+        </h5>
+        <p class="text-muted mb-1">Inkl. MwSt./USt.</p>
     </div>
+    
                                     </div>
                                 </div>
                             </div>
