--- a/app/templates/backend/user_templates/dashboard/view_meine_bestellung.html
+++ b/app/templates/backend/user_templates/dashboard/view_meine_bestellung.html
@@ -142,15 +142,20 @@
     </div>
 
     <div class="d-flex flex-column align-items-end mt-4">
-        <h5 class="mb-2">
+        <h5 class="mb-2 text-right">
             <p class="mb-1">
-                <span>MwSt./USt. Insgesamt:</span> 
-                <span class="text" id="tax">{{ total_tax | round(2) }} €</span>
+                <span><strong>MwSt./USt. Insgesamt:</strong> </span>
+                <span class="text" id="tax">{{ total_tax | round(2) }}0 €</span>
             </p>
-            <strong>Gesamtpreis: {{ total_price }} €</strong>
+            <h5 class="mb-1">
+                <span><strong>Gesamtpreis:</strong> </span>
+                <span><strong>{{ total_price }}0 €</strong></span>
+            </h5>
         </h5>
-        <p class="text-muted mb-1">Inkl. MwSt./USt.</p>
+        <p class="text-muted mb-1 text-right">Inkl. MwSt./USt.</p>
     </div>
+    
+    
     
                                     </div>
                                 </div>
