--- a/app/templates/backend/admin_templates/admin_add_restaurants.html
+++ b/app/templates/backend/admin_templates/admin_add_restaurants.html
@@ -68,6 +68,16 @@
                             {% endfor %}
                         </select>
                     </div>
+
+                    <div class="mb-3">
+                        <label for="latitude" class="form-label">Breitengrad</label>
+                        <input type="text" class="form-control" id="latitude" name="latitude" placeholder="Breitengrad eingeben">
+                    </div>
+                    <div class="mb-3">
+                        <label for="longitude" class="form-label">Längengrad</label>
+                        <input type="text" class="form-control" id="longitude" name="longitude" placeholder="Längengrad eingeben">
+                    </div>
+                    
                     <div class="mb-3">
                         <label for="status" class="form-label">Status</label>
                         <select class="form-control" id="status" name="status">
