--- a/app/templates/frontend/layout/banner.html
+++ b/app/templates/frontend/layout/banner.html
@@ -26,7 +26,7 @@
 
 <!-- Suchergebnisse -->
 <div class="search-results mt-4">
-    <h2 class="h5 mb-4">Suchergebnisse für Restaurants</h2>
+    <!--<h2 class="h5 mb-4">Suchergebnisse für Restaurants</h2>-->
 
     <!-- Überprüfen, ob es Suchergebnisse gibt -->
     {% if restaurants %}
@@ -88,7 +88,7 @@
             </div>
         </div>
     {% else %}
-        <p>Keine Restaurants in der Nähe gefunden.</p>
+        <!--<p>Keine Restaurants in der Nähe gefunden.</p>-->
     {% endif %}
 </div>
 
